@startuml
'https://plantuml.com/sequence-diagram

class TodoListApplication {
+main(String[] args)
+start(Stage stage)
}

class Item {
-String itemDescription
-LocalDate itemDueDate
-boolean itemComplete
-int itemId
-{static}int count
-{static}incrementCount()
-initItemId()
+resetCount()

+toString(): String
+getItemDescription(): String
+setItemDescription(String itemDescription)
+getItemDueDate(): LocalDate
+setItemDueDate(LocalDate itemDueDate)
+isItemComplete(): boolean
+setItemComplete(boolean itemComplete)
+getItemId(): int
+toggleItemComplete()
}

class ItemControllerMethods {
-{final}ObservableList<Item> items
+getItems(): ObservableList<Item>
+addItemHelper(String descriptionText, LocalDate dueDate)
+addItem(String descriptionText, LocalDate dueDate)
+clearItems()
+deleteItem(int itemId)
+editItem(int itemId, String descriptionText, LocalDate dueDate)
+markItem(int itemId)
+getItemById(int itemId): Optional<Item>
+checkForUnique(String descriptionText)
+validateDescriptionInput(String descriptionText)
+verifyDate(String currentLine): LocalDate

}

class ItemController {
-String currentView

-ListView<Item> itemListView
-TextField descriptionText
-DatePicker dueDate
-Button addItemButton
-Button clearAllButton

-addItemToList(ActionEvent actionEvent)
-clearAll(ActionEvent actionEvent)
-deleteItemFromList(ActionEvent actionEvent)
-editItemList(ActionEvent actionEvent)
-markItemInList(ActionEvent actionEvent)
-showAllItems(ActionEvent actionEvent)
-showCompleteItems(ActionEvent actionEvent)
-showIncompleteItems(ActionEvent actionEvent)
-saveList(ActionEvent actionEvent)
-loadList(ActionEvent actionEvent)
-sortItemsList(ActionEvent actionEvent)

+refresh()
+refreshList()
+sortItems()
+showAll()
+showComplete()
+showIncomplete()
+saveItems()
+writeItems(File selectedFile)
+loadItems()

-disableDatePicker()
+Initialize(URL location, ResourceBundle resources)
}

class Error {
-String headerText
-String contextText
+getHeaderText(): String
+getContentText(): String
}

class ErrorMap {
+ErrorMap(String errorType)
}

file scene.fxml {
}
file styles.css {
}
scene.fxml o-- ItemController
TodoListApplication o-- styles.css
TodoListApplication o-- scene.fxml
ItemController o-- Item
ItemController o-- ErrorMap
ErrorMap o-- Error
ItemController o-- ItemControllerMethods
ItemControllerMethods o-- Item

@enduml